Fix: z-index 다 수정함

--- a/상벌점 홈페이지/static/css/admin/studentManagementAdmin.css
+++ b/상벌점 홈페이지/static/css/admin/studentManagementAdmin.css
@@ -238,7 +238,6 @@ nav > .six{
     box-shadow: 4px 4px 18px 4px rgb(207, 207, 207);
     overflow-y: scroll;
     overflow-x: hidden;
-    z-index: -1;
 }
 
 .buttonsContainer {
