--- a/상벌점 홈페이지/static/css/teacher/givePointLog.css
+++ b/상벌점 홈페이지/static/css/teacher/givePointLog.css
@@ -225,7 +225,6 @@ nav>.five {
     box-shadow: 4px 4px 18px 4px rgb(207, 207, 207);
     overflow-y: scroll;
     overflow-x: hidden;
-    z-index: -1;
 }
 
 .buttonsContainer {
